--- a/css/styles.css
+++ b/css/styles.css
@@ -879,8 +879,13 @@ img {
     cursor: pointer;
 }
 
+.form-item {
+    position: relative;
+}
+
 .form-item textarea {
     width: 100%;
+    margin-top: 4px;
     margin-bottom: 20px;
     padding: 12px 16px;
     border: 1px solid var(--color-icon);
@@ -898,21 +903,36 @@ img {
 
 .form-item textarea:focus, .form-item textarea:hover {
     border: 1px solid var(--accent-text-color);
-    cursor: pointer;
+    cursor: text;
 } 
 
 .form-item.deal {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     margin-bottom: 40px;
 }
+/* 
+.form-agree .icon {
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    border: 2px solid black;
+    background-color: tomato;
+}
+
+.checkbox:checked + .icon {
+    background-color: blue;
+} */
+
 
 .form-item input[type="checkbox"] {
-    margin-right: 7px;
+    margin-right: 7px;   
 }
 
 .agree-link {
+    text-decoration: underline;
     color: var(--accent-text-color);
 }
 
@@ -938,7 +958,15 @@ img {
     position: absolute;
     top: 8px;
     right: 8px;
-    font-size: 36px;
-    background-color: var(--background-category-color);
+    background-color: var(--background-main-color);
     color: var(--primary-text-color);
+}
+
+.modal-close .icon {
+    fill: currentColor;
+}
+
+.modal-close:focus, .modal-close:hover {
+    color: var(--accent-text-color);
+    cursor: pointer;
 }
