--- a/css/styles.css
+++ b/css/styles.css
@@ -913,22 +913,44 @@ img {
     align-items: center;
     margin-bottom: 40px;
 }
-/* 
-.form-agree .icon {
+
+.form-agree {
     display: inline-block;
-    width: 16px;
-    height: 15px;
-    border: 2px solid black;
-    background-color: tomato;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color);
 }
 
-.checkbox:checked + .icon {
-    background-color: blue;
-} */
+.form-agree::before {
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--primary-text-color);
+    border-radius: 2px;
+}
+
+.checkbox:checked + .form-agree::before {
+    background-color: var(--accent-text-color);
+    background-image: url("/images/forms/checkbox.svg");
+    border-color: var(--accent-text-color);
+}
 
 
 .form-item input[type="checkbox"] {
-    margin-right: 7px;   
+    margin-right: 7px;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0)
+    /* appearance: none; */
 }
 
 .agree-link {
