--- a/css/styles.css
+++ b/css/styles.css
@@ -935,7 +935,7 @@ img {
 
 .checkbox:checked + .form-agree::before {
     background-color: var(--accent-text-color);
-    background-image: url("/images/forms/checkbox.svg");
+    background-image: url("./images/forms/checkbox.svg");
     border-color: var(--accent-text-color);
 }
 
